# SmartCity-OpenEnv-Autonomous-Traffic-Control-with-Predictive-Intelligence-Emergency-Prioritization

./: Dockerfile  README.md  error.txt  inference.py  inference_out.txt  openenv.yaml  pyproject.toml  requirements.txt  run_dummy_agent.py  test_env.py  trace.txt
env/: __init__.py  environment.py  grader.py  models.py  reward.py  simulation.py  tasks.py
server/: app.py
